--- a/src/main/resources/templates/subcategory.html
+++ b/src/main/resources/templates/subcategory.html
@@ -2,8 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <!-- TODO category name -->
-    <title th:text="${subcategory.getName()}"> | Book Your Shelf</title>
+    <title th:text="${subcategory.getName()} + ' | Book Your Shelf'"></title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Little Closet template">
