--- a/src/main/resources/templates/admin_panel/_coupon.html
+++ b/src/main/resources/templates/admin_panel/_coupon.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="login-text p-b-10" style="color: black;">
-                                Discount Rate (%)
+                                Discount Percentage (%)
                             </div>
                             <input type="number" id="coupon_rate" min="1" max="99"
                                    class="checkout_input form-control discount-rate"
