--- a/src/main/resources/templates/thank-you.html
+++ b/src/main/resources/templates/thank-you.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Thank You | Book Your Shelf</title>
+    <title th:text="${'Thank You, ' + user.getName() + ' | Book Your Shelf'}"></title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Little Closet template">
