price and href fixes in product tabs

--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1541,7 +1541,7 @@
 
                                     <div class="col-lg-2 col-md-2 col-xs-4">
                                         <div class="profile-order-text vertical_center">
-                                            <td th:text="${product.price} +  ' ₺'"></td>
+                                            <td th:text="${'₺' + product.price}"></td>
                                         </div>
                                     </div>
 
