--- a/src/main/resources/static/styles/admin-panel-product.css
+++ b/src/main/resources/static/styles/admin-panel-product.css
@@ -40,6 +40,7 @@
     font-weight: 400 !important;
     color: #969696 !important;
 }
+
 .long_desc_textarea {
     background: #FFFFFF;
     padding-left: 20px;
@@ -49,4 +50,20 @@
     -ms-transition: all 200ms ease;
     -o-transition: all 200ms ease;
     transition: all 200ms ease;
+}
+
+.product_details_image_img {
+    max-width: 100%;
+    max-height: 500px;
+    border-style: solid;
+    border-color: #C0C0C0;
+    border-width: 1px;
+}
+
+.product_details_image {
+}
+
+.product_details_image img {
+    max-height: 500px;
+    max-width: 100%;
 }
