--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -50,7 +50,7 @@
                         <input type="text" id="new_category_name"
                                class="checkout_input form-control"
                                placeholder="Category Name" required="required" th:field="*{name}"
-                               pattern="[A-Za-z]+" title="Category name cannot have digits.">
+                               pattern="[A-Za-z ]+" title="Category name cannot have digits.">
                     </div>
 
                     <div style="color: red;" th:if="${#fields.hasErrors('*')}">
@@ -302,7 +302,6 @@
 
 <script>
     $('#add_category_button').click(function (event) {
-        event.preventDefault();
         var name = $('#new_category_name').val();
         var productType = $('#category_product_type option:selected').val();
         var ret = {
@@ -310,26 +309,39 @@
             productType: productType
         };
 
-        $.post("/admin-panel/category", ret, function (data) {
-            iziToast.show({
-                title: 'Success',
-                message: 'Category ' + name + ' added successfully.',
-                position: 'topRight',
-                color: 'green'
-            });
-            window.location.href = "/admin-panel#category";
-            setTimeout(function () {
-                history.pushState(null, null, ' ');
-            }, 100);
-        }).fail(function (data) {
-            iziToast.show({
-                title: 'Fail',
-                message: data.responseText,
-                position: 'topRight',
-                color: 'red'
-            });
-        })
+        if (validation_check(["category_product_type", "new_category_name"])) {
+            event.preventDefault();
+            $.post("/admin-panel/category", ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Category ' + name + ' added successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/admin-panel#category";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            })
+        }
     });
+
+    function validation_check(arr) {
+        for (var i = 0; i < arr.length; i++) {
+            if (!document.getElementById(arr[i]).checkValidity()) {
+                return false;
+            }
+        }
+        return true;
+    }
+
 </script>
 <script th:src="@{/static/js/category.js}"></script>
 </html>
