--- a/src/main/resources/templates/category_details/_information.html
+++ b/src/main/resources/templates/category_details/_information.html
@@ -129,7 +129,8 @@
                         </div>
                         <input type="text" id="category-name-update"
                                class="login_input form-control"
-                               required="required" th:value="${category.name}">
+                               required="required" pattern="[A-Za-z ]+" title="Category name cannot have digits."
+                               th:value="${category.name}">
                     </div>
 
                     <div><!--ERROR--></div>
@@ -146,7 +147,6 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
     $('#updateCategory,#deleteCategory').click(function (event) {
-        event.preventDefault();
         var button = $(this).attr("id");
         var categoryId = /*[[${category.getId()}]]*/ 'default';
         var name = $('#category-name-update').val();
@@ -158,25 +158,28 @@
         };
 
         if (button === "updateCategory") {
-            $.post("/category-details/information/" + categoryId, ret, function (data) {
-                iziToast.show({
-                    title: 'Success',
-                    message: 'Category ' + name + ' updated successfully.',
-                    position: 'topRight',
-                    color: 'green'
-                });
-                window.location.href = "/category-details/" + categoryId + "#information";
-                setTimeout(function () {
-                    history.pushState(null, null, ' ');
-                }, 100);
-            }).fail(function (data) {
-                iziToast.show({
-                    title: 'Fail',
-                    message: data.responseText,
-                    position: 'topRight',
-                    color: 'red'
-                });
-            })
+            if (validation_check(["category-name-update", "category_product_type"])) {
+                event.preventDefault();
+                $.post("/category-details/information/" + categoryId, ret, function (data) {
+                    iziToast.show({
+                        title: 'Success',
+                        message: 'Category ' + name + ' updated successfully.',
+                        position: 'topRight',
+                        color: 'green'
+                    });
+                    window.location.href = "/category-details/" + categoryId + "#information";
+                    setTimeout(function () {
+                        history.pushState(null, null, ' ');
+                    }, 100);
+                }).fail(function (data) {
+                    iziToast.show({
+                        title: 'Fail',
+                        message: data.responseText,
+                        position: 'topRight',
+                        color: 'red'
+                    });
+                })
+            }
         } else if (button === "deleteCategory") {
             if (confirm('Are you sure you want to delete?')) {
                 $.post("/category-details/information/" + categoryId, ret, function (data) {
@@ -201,6 +204,16 @@
         }
 
     })
+
+    function validation_check(arr) {
+        for (var i = 0; i < arr.length; i++) {
+            if (!document.getElementById(arr[i]).checkValidity()) {
+                return false;
+            }
+        }
+        return true;
+    }
+
     /*]]>*/
 </script>
 </html>
