--- a/src/main/resources/templates/subcategory_details/_information.html
+++ b/src/main/resources/templates/subcategory_details/_information.html
@@ -93,13 +93,14 @@
                 <form action="#" id="category-info-update-form" class="checkout_form">
 
 
-                    <!-- Category Name -->
+                    <!-- Subcategory Name -->
                     <div>
                         <div class="login-text p-b-10" style="color: black;">
                             Subcategory Name
                         </div>
                         <input type="text" id="category-name-update"
                                class="login_input form-control"
+                               pattern="[A-Za-z ]+" title="Category name cannot have digits."
                                required="required" th:value="${subcategory.name}">
                     </div>
 
@@ -118,7 +119,6 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
     $('#updateSubcategory,#deleteSubcategory').click(function (event) {
-        event.preventDefault();
         var button = $(this).attr("id");
         var subcategoryId = /*[[${subcategory.getId()}]]*/ 'default';
         var name = $('#category-name-update').val();
@@ -129,25 +129,28 @@
         };
 
         if (button === "updateSubcategory") {
-            $.post("/subcategory-details/" + subcategoryId, ret, function (data) {
-                iziToast.show({
-                    title: 'Success',
-                    message: 'Subcategory ' + name + ' updated successfully.',
-                    position: 'topRight',
-                    color: 'green'
-                });
-                window.location.href = "/subcategory-details/" + subcategoryId;
-                setTimeout(function () {
-                    history.pushState(null, null, ' ');
-                }, 100);
-            }).fail(function (data) {
-                iziToast.show({
-                    title: 'Fail',
-                    message: data.responseText,
-                    position: 'topRight',
-                    color: 'red'
-                });
-            })
+            if (validation_check(["category-name-update"])) {
+                event.preventDefault();
+                $.post("/subcategory-details/" + subcategoryId, ret, function (data) {
+                    iziToast.show({
+                        title: 'Success',
+                        message: 'Subcategory ' + name + ' updated successfully.',
+                        position: 'topRight',
+                        color: 'green'
+                    });
+                    window.location.href = "/subcategory-details/" + subcategoryId;
+                    setTimeout(function () {
+                        history.pushState(null, null, ' ');
+                    }, 100);
+                }).fail(function (data) {
+                    iziToast.show({
+                        title: 'Fail',
+                        message: data.responseText,
+                        position: 'topRight',
+                        color: 'red'
+                    });
+                })
+            }
         } else if (button === "deleteSubcategory") {
             if (confirm('Are you sure you want to delete?')) {
                 $.post("/subcategory-details/" + subcategoryId, ret, function (data) {
@@ -172,6 +175,16 @@
         }
 
     })
+
+    function validation_check(arr) {
+        for (var i = 0; i < arr.length; i++) {
+            if (!document.getElementById(arr[i]).checkValidity()) {
+                return false;
+            }
+        }
+        return true;
+    }
+
     /*]]>*/
 </script>
 </html>
