--- a/src/main/resources/templates/subcategory_details/_subcategory.html
+++ b/src/main/resources/templates/subcategory_details/_subcategory.html
@@ -31,6 +31,7 @@
 
                         <input type="text" id="subcategory_name"
                                class="checkout_input form-control"
+                               pattern="[A-Za-z ]+" title="Category name cannot have digits."
                                placeholder="Subcategory Name" required="required">
                     </div>
 
@@ -246,7 +247,6 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
     $('#addSubcategory').click(function (event) {
-        event.preventDefault();
         var name = $('#subcategory_name').val();
         var categoryId = /*[[${subcategory.getId()}]]*/ 'default';
         var categoryName = /*[[${subcategory.getName()}]]*/ 'default';
@@ -254,26 +254,39 @@
             name: name
         };
 
-        $.post("/subcategory-details/subcategory/" + categoryId, ret, function (data) {
-            iziToast.show({
-                title: 'Success',
-                message: 'Subcategory ' + name + ' added successfully to ' + categoryName + ' category.',
-                position: 'topRight',
-                color: 'green'
-            });
-            window.location.href = "/subcategory-details/" + categoryId + "#subcategory";
-            setTimeout(function () {
-                history.pushState(null, null, ' ');
-            }, 100);
-        }).fail(function (data) {
-            iziToast.show({
-                title: 'Fail',
-                message: data.responseText,
-                position: 'topRight',
-                color: 'red'
-            });
-        })
+        if (validation_check(["subcategory_name"])) {
+            event.preventDefault();
+            $.post("/subcategory-details/subcategory/" + categoryId, ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Subcategory ' + name + ' added successfully to ' + categoryName + ' category.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/subcategory-details/" + categoryId + "#subcategory";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            })
+        }
     });
+
+    function validation_check(arr) {
+        for (var i = 0; i < arr.length; i++) {
+            if (!document.getElementById(arr[i]).checkValidity()) {
+                return false;
+            }
+        }
+        return true;
+    }
+
     /*]]>*/
 </script>
 
