PayPal button style fix

--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -156,7 +156,8 @@
                                 </div>
 
                                 <div class="tab-pane fade" id="nav-tab-paypal">
-                                    <div class="checkout_button trans_200"><a id="PayPal" name="PayPal">
+                                    <div class="checkout_button trans_200"><a id="PayPal" name="PayPal"
+                                                                              href="">
                                         Login my Paypal</a></div>
                                     <br>
                                     <p><strong>Note:</strong> Your payment will be processed from your PayPal
